test/typecheck/errors/bad-views16.boa
v1: table[year: int][projectID: string][fileName: string] of temp:int;

v4 := v1[1994];
v5 := v4[_]["abc"];

v6 := v1[2019];
v7 := v6["abc"];
v8 := v7["foo"];

row_v4: v4._row;
row_v7: v7._row;
row_v4 = row_v7;
